# hybird-batch-prefill-on-ane

./: .gitignore  CMakeLists.txt  README.md  Todo.md  ane_inference_bridge.cpp  ane_inference_bridge.h  build_xcframework.sh  generate.cpp  generate.h  main.cpp
core/: ane_runtime.cpp  ane_runtime.h  model_loader.cpp  model_loader.h  safetensors.cpp  safetensors.h
docs/: _config.yml  index.html  paper.tex
models/llm/: qwen3_5.cpp  qwen3_5.h
python/: CMakeLists.txt  ane_lm_binding.cpp  pyproject.toml  setup.py
python/ane_lm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
results/: bench_0.8B.txt  bench_2B.txt  benchmark_results.json
scripts/: bench_hybrid.py  hybrid_decode.py  requirements.txt
